--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "cartera-frontend",
+  "name": "cartera-fullstack",
   "private": true,
   "version": "1.0.0",
-  "description": "Frontend para aplicación de gestión de cartera de préstamos",
+  "description": "Aplicación fullstack de gestión de cartera de préstamos",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "install-all": "npm install && cd backend && npm install",
+    "build-frontend": "tsc && vite build",
+    "build-backend": "cd backend && npm run build",
+    "build-all": "npm run build-frontend && npm run build-backend"
   },
   "dependencies": {
     "react": "^18.2.0",
