--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,40 @@
-node_modules
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Dependency directories
+node_modules/
+
+# Environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build outputs
+dist/
+build/
+
+# Database
+*.sqlite
+*.db
+
+# IDE
+.vscode/
+.idea/
+
+# OS
 .DS_Store
-dist
-dist-ssr
-*.local
-.env
+Thumbs.db
+
+# Other
+*.tgz
+*.tar.gz
