--- a/package.json
+++ b/package.json
@@ -1,43 +1,54 @@
 {
-  "name": "cartera-fullstack",
-  "private": true,
+  "name": "cartera-prestamos",
   "version": "1.0.0",
-  "description": "Aplicación fullstack de gestión de cartera de préstamos",
-  "type": "module",
+  "description": "Sistema completo de gestión de cartera de préstamos",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "dev:backend": "nodemon --exec \"npx ts-node src/server.ts\" --ext ts",
+    "dev:frontend": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "install-all": "npm install && cd backend && npm install",
-    "build-frontend": "tsc && vite build",
-    "build-backend": "cd backend && npm run build",
-    "build-all": "npm run build-frontend && npm run build-backend"
+    "start": "node dist/server.js"
   },
   "dependencies": {
+    "express": "^4.18.2",
+    "typeorm": "^0.3.17",
+    "sqlite3": "^5.1.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "reflect-metadata": "^0.1.13",
+    "node-cron": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
+    "axios": "^1.6.0",
+    "react-hot-toast": "^2.4.1",
+    "date-fns": "^2.30.0",
+    "@heroicons/react": "^2.0.18",
     "@fullcalendar/react": "^6.1.9",
     "@fullcalendar/daygrid": "^6.1.9",
     "@fullcalendar/interaction": "^6.1.9",
-    "@heroicons/react": "^2.0.18",
-    "axios": "^1.6.0",
-    "react-hot-toast": "^2.4.1",
-    "date-fns": "^2.30.0"
+    "lucide-react": "^0.292.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.15",
+    "@types/node": "^20.8.10",
+    "@types/node-cron": "^3.0.9",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.1.0",
     "autoprefixer": "^10.4.16",
+    "concurrently": "^8.2.2",
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "nodemon": "^3.0.1",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "vite": "^4.5.0"
   }
