realizado en railway

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Entorno de desarrollo local
-NODE_ENV=development
+NODE_ENV=production
 
 # URL del API (el backend se ejecuta en el puerto 3000)
-VITE_API_URL=http://localhost:3000
+VITE_API_URL=https://cartera-production-d368.up.railway.app
