Ajusta tsconfig para compilar servicios

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
     "src/routes/**/*.ts",
     "src/entities/**/*.ts",
     "src/jobs/**/*.ts",
-    "src/services/LoanService.ts",
+    "src/services/**/*.ts",
     "src/types/**/*.ts"
   ],
   "exclude": [
